--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "normalizr",
-  "version": "3.2.4",
+  "name": "@mediadrake/normalizr",
+  "version": "3.2.6",
   "description": "Normalizes and denormalizes JSON according to schema for Redux and Flux applications",
   "bugs": {
-    "url": "https://github.com/paularmstrong/normalizr/issues"
+    "url": "https://github.com/gtg092x/normalizr/issues"
   },
-  "homepage": "https://github.com/paularmstrong/normalizr",
+  "homepage": "https://github.com/gtg092x/normalizr",
   "repository": {
-    "url": "https://github.com/paularmstrong/normalizr.git",
+    "url": "https://github.com/gtg092x/normalizr.git#npm",
     "type": "git"
   },
   "keywords": ["flux", "redux", "normalize", "denormalize", "api", "json"],
@@ -63,6 +63,9 @@
     "uglify-es": "^3.3.8"
   },
   "dependencies": {},
+  "rollup": {
+    "name": "normalizr"
+  },
   "lint-staged": {
     "src/**/*.js": ["test", "git add"],
     "*.{js,json,css,md}": ["prettier --write", "git add"]
